tests/golden/instances/instances/instances/01_gateways.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: test-instance-01
spec:
  gatewayClassName: test-instances-01
  listeners:
    - allowedRoutes:
        namespaces:
          from: default
      name: default
      port: 80
      protocol: default
    - allowedRoutes:
        namespaces:
          from: default
      name: default
      port: 80
      protocol: default
    - allowedRoutes:
        namespaces:
          from: All
      name: http
      port: 80
      protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: test-instance-02
spec:
  gatewayClassName: test-default
  listeners:
    - allowedRoutes:
        namespaces:
          from: default
      name: default
      port: 80
      protocol: default
    - allowedRoutes:
        namespaces:
          from: default
      name: default
      port: 80
      protocol: default
---
apiVersion: microgateway.airlock.com/v1alpha1
kind: GatewayParameters
metadata:
  name: test-instance-01
spec:
  defaults:
    downstream:
      remoteIP:
        proxyProtocol: {}
    sessionHandlingRef:
      name: redis-session
  features:
    envoyExtensionPolicyEnabled: true
    insecureTLSAllowed: true
  kubernetes:
    deployment:
      automountServiceAccountToken: false
      engineContainer:
        resources:
          limits:
            cpu: 1
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
      placement:
        affinity:
          podAntiAffinity:
            requiredDuringSchedulingIgnoredDuringExecution:
              - labelSelector:
                  matchExpressions:
                    - key: gateway.networking.k8s.io/gateway-name
                      operator: In
                      values:
                        - vshn-airlock-dev-01
                topologyKey: kubernetes.io/hostname
              - labelSelector:
                  matchExpressions:
                    - key: gateway.networking.k8s.io/gateway-name
                      operator: In
                      values:
                        - vshn-test-test
                topologyKey: kubernetes.io/hostname
        nodeSelector:
          node-role.kubernetes.io/infra: ''
          node-role.kubernetes.io/test: ''
      replicas: 2
---
apiVersion: microgateway.airlock.com/v1alpha1
kind: GatewayParameters
metadata:
  name: test-instance-02
spec:
  defaults:
    downstream:
      remoteIP:
        proxyProtocol: {}
    sessionHandlingRef:
      name: redis-session
  features:
    envoyExtensionPolicyEnabled: true
    insecureTLSAllowed: true
  kubernetes:
    deployment:
      automountServiceAccountToken: false
      engineContainer:
        resources:
          limits:
            cpu: 1
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
      placement:
        affinity:
          podAntiAffinity:
            requiredDuringSchedulingIgnoredDuringExecution:
              - labelSelector:
                  matchExpressions:
                    - key: gateway.networking.k8s.io/gateway-name
                      operator: In
                      values:
                        - vshn-airlock-dev-01
                topologyKey: kubernetes.io/hostname
        nodeSelector:
          node-role.kubernetes.io/infra: ''
      replicas: 2
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    appuio.ch/waf: airlock
    name: test-instance-01
    openshift.io/cluster-monitoring: 'true'
    vshn.microgateway/redis-sync-secret: 'true'
  name: test-instance-01
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    appuio.ch/waf: airlock
    name: test-instance-02
    openshift.io/cluster-monitoring: 'true'
    vshn.microgateway/redis-sync-secret: 'true'
  name: test-instance-02
