tests/golden/instances/instances/instances/defaultSpec.yaml
egressNetpol:
  spec:
    egress:
      - ports:
          - port: 13377
            protocol: TCP
        to:
          - namespaceSelector:
              matchLabels:
                kubernetes.io/metadata.name: syn-airlock-microgateway
      - ports:
          - port: 5353
            protocol: UDP
        to:
          - namespaceSelector:
              matchLabels:
                kubernetes.io/metadata.name: openshift-dns
      - ports:
          - port: 6379
            protocol: TCP
        to:
          - namespaceSelector:
              matchLabels:
                appcat.vshn.io/claim-namespace: vshn-airlock-redis
      - ports:
          - port: 8080
            protocol: TCP
          - port: 8443
            protocol: TCP
        to:
          - namespaceSelector:
              matchLabels:
                appcat.vshn.io/claim-namespace: broker-test
    podSelector:
      matchLabels:
        gateway.networking.k8s.io/gateway-class-name: microgateway-cloudscale
        gateway.networking.k8s.io/gateway-name: vshn-airlock-dev-01
    policyTypes:
      - Egress
gateway:
  spec:
    gatewayClassName: test-default
    listeners:
      - allowedRoutes:
          namespaces:
            from: default
        name: default
        port: 80
        protocol: default
      - allowedRoutes:
          namespaces:
            from: default
        name: default
        port: 80
        protocol: default
gatewayParameters:
  spec:
    defaults:
      downstream:
        remoteIP:
          proxyProtocol: {}
      sessionHandlingRef:
        name: redis-session
    features:
      envoyExtensionPolicyEnabled: true
      insecureTLSAllowed: true
    kubernetes:
      deployment:
        automountServiceAccountToken: false
        engineContainer:
          resources:
            limits:
              cpu: 1
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
        placement:
          affinity:
            podAntiAffinity:
              requiredDuringSchedulingIgnoredDuringExecution:
                - labelSelector:
                    matchExpressions:
                      - key: gateway.networking.k8s.io/gateway-name
                        operator: In
                        values:
                          - vshn-airlock-dev-01
                  topologyKey: kubernetes.io/hostname
          nodeSelector:
            node-role.kubernetes.io/infra: ''
        replicas: 2
httpRedirect:
  metadata:
    name: http-filter-redirect
    namespace: vshn-airlock-dev-01
  spec:
    hostnames:
      - '*.hintest.ch'
    parentRefs:
      - group: gateway.networking.k8s.io
        kind: Gateway
        name: vshn-airlock-dev-01
        sectionName: http-default
    rules:
      - filters:
          - requestRedirect:
              scheme: https
              statusCode: 301
            type: RequestRedirect
        matches:
          - method: GET
            path:
              type: PathPrefix
              value: /
namespace:
  labels:
    appuio.ch/waf: airlock
    vshn.microgateway/redis-sync-secret: 'true'
pdb:
  metadata:
    labels:
      gateway.networking.k8s.io/gateway-name: vshn-airlock-dev-01
    name: vshn-airlock-dev-01
    namespace: vshn-airlock-dev-01
  spec:
    minAvailable: 1
    selector:
      matchLabels:
        gateway.networking.k8s.io/gateway-name: vshn-airlock-dev-01
    unhealthyPodEvictionPolicy: IfHealthyBudget
redisProvider:
  spec:
    auth:
      password:
        secretRef:
          name: redis-password
      username: default
    mode:
      standalone:
        host: redis-master.vshn-redis-redis-58ztv.svc.cluster.local
        port: 6379
    timeouts:
      connect: 10s
      maxDuration: 2s
    tls:
      certificateVerification:
        custom:
          trustedCA:
            certificates:
              - secretRef:
                  name: redis-ca
      clientCertificate:
        secretRef:
          name: redis-clientcert
sessionHandling:
  spec:
    auth:
      password:
        secretRef:
          name: redis-password
      username: default
    mode:
      standalone:
        host: redis-master.vshn-redis-redis-58ztv.svc.cluster.local
        port: 6379
    timeouts:
      connect: 10s
      maxDuration: 2s
    tls:
      certificateVerification:
        custom:
          trustedCA:
            certificates:
              - secretRef:
                  name: redis-ca
      clientCertificate:
        secretRef:
          name: redis-clientcert
