tests/golden/instances/instances/instances/httpRouteUnpatched.yaml
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    namespace: test-instance-01
  spec: {}
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    namespace: test-instance-02
  spec: {}
