tests/golden/instances/instances/instances/instanceParams.yaml
test-instance-01:
  gateway:
    spec:
      gatewayClassName: test-instances-01
      listeners:
        - allowedRoutes:
            namespaces:
              from: All
          name: http
          port: 80
          protocol: HTTP
  gatewayParameters:
    spec:
      kubernetes:
        deployment:
          placement:
            affinity:
              podAntiAffinity:
                requiredDuringSchedulingIgnoredDuringExecution:
                  - labelSelector:
                      matchExpressions:
                        - key: gateway.networking.k8s.io/gateway-name
                          operator: In
                          values:
                            - vshn-test-test
                    topologyKey: kubernetes.io/hostname
            nodeSelector:
              node-role.kubernetes.io/test: ''
test-instance-02: {}
